--- a/css/styles.css
+++ b/css/styles.css
@@ -13,16 +13,50 @@ body {
     background-color: #fff;
 }
 
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
+    width: auto;
+}
+
 button {
     font-family: inherit;
 }
 
 a {
     text-decoration: none;
+    display: inline-block;
+}
+
+ul {
+    margin: 0;
+    padding-left: 0;
 }
 
 li {
     list-style-type: none;
+}
+
+img {
+    display: block;
+}
+
+.container {
+    max-width: 1128px;
+    margin-left: 156px;
+    margin-right: 156px;
+    flex-shrink: 0;
+}
+
+.header-inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-nav {
+    display: flex;
+    gap: 24px;
+    flex-grow: 1;
 }
 
 .logo {
@@ -33,6 +67,7 @@ li {
     text-transform: uppercase;
     line-height: 1.17;
     letter-spacing: 0.03em;
+    padding: 24px 0;
 }
 .accent {
     color: #2E2F42;
@@ -40,13 +75,22 @@ li {
     letter-spacing: 0.03em;
 }
 
+.nav-list {
+    display: flex;
+    gap: 40px;
+    flex-grow: 1;
+    justify-content: center;
+}
+
 .nav-item {
+    display: inline-block;
     color: #2E2F42;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
     text-transform: capitalize;
     letter-spacing: 0.02em;
+    padding: 24px 0;
 }
 
 .nav-item:active,
@@ -59,11 +103,18 @@ li {
     font-style: normal;
 }
 
+.contacts-list {
+    display: flex;
+    gap: 40px;
+    padding: 24px 0;
+}
+
 .contacts {
     color: #434455;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    display: inline-block;
 }
 
 .contacts:hover,
@@ -72,6 +123,15 @@ li {
 }
 
 /*hero section*/
+
+.hero-inner {
+    padding: 188px 0 188px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 120px;
+}
+
 .hero {
     background-color: #2E2F42;
     color: #fff;
@@ -82,6 +142,8 @@ li {
     line-height: 1.07;
     letter-spacing: 0.02em;
     text-align: center;
+    margin-bottom: 48px;
+    max-width: 496px;
 }
 
 .button {
@@ -93,6 +155,8 @@ li {
     letter-spacing: 0.04em;
     text-transform: capitalize;
     cursor: pointer;
+    border-radius: 4px;
+    padding: 16px 32px;
 }
 
 .button:hover,
@@ -102,8 +166,21 @@ li {
 }
 /*about section*/
 
+.about-inner {
+    margin-bottom: 120px;
+}
+
 .about-main-title {
     text-align: center;
+}
+
+.about-list {
+    display: flex;
+    gap: 24px;
+}
+
+.about-item {
+    width: calc((100% - 72px) / 3);
 }
 
 .about-title {
@@ -112,6 +189,7 @@ li {
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
 }
 
 .about-text {
@@ -123,8 +201,10 @@ li {
 }
 
 /*team section*/
+
 .team-sec {
     background-color: #F4F4FD;
+    padding-top: 120px;
 }
 
 .team-title {
@@ -134,10 +214,21 @@ li {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     text-align: center;
+    margin-bottom: 72px;
+}
+
+.team-list {
+    display: flex;
+    gap: 24px;
 }
 
 .member-card {
     background-color: #fff;
+    margin-bottom: 120px;
+}
+
+.team-member-info {
+    margin: 32px 0;
 }
 
 .team-member {
@@ -146,6 +237,8 @@ li {
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    text-align: center;
+    margin-bottom: 8px;
 }
 
 .member-position {
@@ -153,12 +246,18 @@ li {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    text-align: center;
 }
 
 /*portfolio section*/
 
 .portfolio-sec {
     background-color: #fff;
+    padding-top: 120px;
+}
+
+.portfolio-inner {
+    margin-bottom: 120px;
 }
 
 .portfolio-title {
@@ -168,6 +267,18 @@ li {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     text-align: center;
+    margin-bottom: 72px;
+}
+
+.portfolio-list {
+    display: flex;
+    gap: 24px;
+    flex-wrap: wrap;
+}
+
+.portfolio-elem-info {
+    margin: 32px 0;
+    padding: 0 16px;
 }
 
 .portfolio-elem {
@@ -177,6 +288,9 @@ li {
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    width: calc((100% - 48px) / 3 );
+    margin-bottom: 8px;
+    width: auto;
 }
 
 .portfolio-descr {
@@ -193,6 +307,10 @@ li {
 
 .footer {
     background-color: #2E2F42;
+} 
+
+.footer-inner {
+    padding: 102px 0 100px;
 }
 
 .footer-logo {
@@ -203,12 +321,14 @@ li {
     text-transform: uppercase;
     line-height: 1.17;
     letter-spacing: 0.03em;
+    margin-bottom: 18px;
 }
 
 .footer-accent {
     color: #F4F4FD;
     font-weight: 700;
     letter-spacing: 0.03em;
+    margin-bottom: 18px;
 }
 
 .footer-text {
@@ -216,4 +336,5 @@ li {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    max-width: 264px;
 }
