--- a/css/styles.css
+++ b/css/styles.css
@@ -344,6 +344,12 @@ img {
     padding: 100px 0;
 }
 
+.footer-inner {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
 .footer-logo {
     display: inline-block;
     font-family: 'Raleway', sans-serif;
