--- a/css/styles.css
+++ b/css/styles.css
@@ -309,6 +309,10 @@ img {
         row-gap: 48px;
 }
 
+.portfolio-item {
+        width: calc((100% - 48px) / 3);
+}
+
 .portfolio-elem-info {
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
@@ -322,7 +326,6 @@ img {
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    width: calc((100% - 48px) / 3);
     margin-bottom: 8px;
     width: auto;
 }
