--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,9 @@ img {
     max-width: 1158px;
     padding: 0 15px;
     margin: 0 auto;
+}
+
+.header-inner {
     display: flex;
 }
 
@@ -346,13 +349,8 @@ img {
     padding: 100px 0;
 }
 
-.footer-inner {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
-
 .footer-logo {
+    display: inline-block;
     font-family: 'Raleway', sans-serif;
     color: #4D5AE5;
     font-weight: 700;
@@ -361,7 +359,6 @@ img {
     line-height: 1.17;
     letter-spacing: 0.03em;
     margin-bottom: 16px;
-    display: inline-block;
 }
 
 .footer-accent {
